# KnotTrace

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-android.yml  release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  main.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.updater/: knottrace.key.pub
apps/desktop/src-tauri/capabilities/: mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: assist.rs  benchmark.rs  connect.rs  dns_integrity.rs  lib.rs  local_caps.rs  main.rs  monitor.rs  mtu_assist.rs  protect.rs  state.rs  throughput.rs  tray.rs  updater.rs
apps/desktop/src/components/: AppHeader.tsx  BenchmarkPanel.tsx  DnsIntegrityBadge.tsx  DnsIntegrityPanel.tsx  DnsIntegritySettingsEditor.tsx  EmptyState.tsx  FeaturePage.tsx  GlobalSearch.tsx  LinkFactsPanel.tsx  LocalCapsPanel.tsx  MetricCard.tsx  MtuAssistPanel.tsx  NetworkDiagnosisPanel.tsx  NetworkInsightsPanel.tsx  NextStepsPanel.tsx  ProxyPathPanel.tsx  Sidebar.tsx  StabilityProbesPanel.tsx  StatusHero.tsx  ThemeToggle.tsx  TrendCharts.tsx  (+5 more)
crates/network-core/: Cargo.toml
crates/network-core/src/: assist.rs  auto_protect_log.rs  benchmark.rs  clash_api.rs  connect.rs  diagnosis.rs  dns_integrity.rs  egress.rs  env.rs  fingerprint.rs  lib.rs  link_facts.rs  network_context.rs  probe.rs  process.rs  protect.rs  reachability.rs  recommendations.rs  score.rs  stability.rs  store.rs  throughput.rs  tor.rs  tunnel_compare.rs  types.rs  upstream_pool.rs
crates/network-core/src/dns_platform/: linux.rs  macos.rs  mod.rs  parsers.rs  stub.rs  windows.rs
crates/network-core/src/link_platform/: linux.rs  macos.rs  mod.rs  parsers.rs  stub.rs  windows.rs
crates/network-core/src/local_caps/: mod.rs  parsers.rs  stub.rs  windows.rs
crates/network-core/src/mtu_assist/: linux.rs  macos.rs  mod.rs  parsers.rs  stub.rs  windows.rs
docs/: START-HERE.md  architecture.md  development.md  github-ci.md  mobile-signing.md  platform-support.md  release.md  slow-speed-triage.md  slowdown-factors.md  updater-signing.md
scripts/: fix-knottrace-icons.py  generate-android-keystore.sh  generate-updater-keys.sh  setup-github-signing-secret.ps1  setup-github-signing-secret.sh  sync-npm-lockfile.sh
specs/backend/: connectivity-recovery-v1.2.md  dns-integrity-design-v0.7.md  do-not-disturb-design.md  link-facts-design.md  local-first-improvement-roadmap.md  mtu-assist-design.md  network-diagnosis-roadmap-v0.8.md  public-network-egress-v1.3.md  slow-speed-diagnosis-v1.3.x.md  tunnel-path-compare-design.md  upstream-pool-quality-design.md  v1.5-silence-control-roadmap.md  windows-local-caps-design.md
(+17 files in other folders)
