[workspace]
resolver = "2"
members = [
    "crates/network-core",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "1.4.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
