[package]
name = "network-core"
description = "Environment detection, probing, and health scoring for Network Companion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
hickory-resolver = "0.25"
netdev = "0.31"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite = { version = "0.34", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[bin]]
name = "network-probe"
path = "src/bin/network-probe.rs"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
