[package]
name = "network-desktop"
description = "Network Companion desktop app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "network_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono.workspace = true
network-core = { path = "../../../crates/network-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
thiserror.workspace = true
tokio.workspace = true
dirs = "6"
tracing.workspace = true
