[package]
name = "network-desktop"
description = "KnotTrace desktop app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "network_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono.workspace = true
network-core = { path = "../../../crates/network-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror.workspace = true
tokio.workspace = true
dirs = "6"
tracing.workspace = true
